--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -42,8 +42,8 @@
                 app:layout_constraintTop_toTopOf="parent"/>
             <EditText
                 android:id="@+id/edit_text"
-                android:layout_width="241dp"
-                android:layout_height="20dp"
+                android:layout_width="200dp"
+                android:layout_height="23dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginLeft="14dp"
                 android:hint="请输入手机号"
@@ -71,8 +71,8 @@
 
             <EditText
                 android:id="@+id/edit_text2"
-                android:layout_width="213dp"
-                android:layout_height="20dp"
+                android:layout_width="200dp"
+                android:layout_height="23dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginLeft="14dp"
                 android:hint="请输入密码"
@@ -86,7 +86,7 @@
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:src="@mipmap/visible3x"
-                app:layout_constraintLeft_toRightOf="@id/edit_text2"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@id/image_view2" />
             <View
                 android:id="@+id/line2"
