--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -37,7 +37,7 @@
     <LinearLayout
         android:id="@+id/L_layout"
         android:layout_width="345dp"
-        android:layout_height="164dp"
+        android:layout_height="170dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
@@ -53,16 +53,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="17dp"
                 android:layout_marginRight="33dp"
-                android:paddingLeft="15dp"
                 android:text="手机号"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:layout_width="0dp"
-                android:layout_height="54dp"
-                android:layout_weight="3"
+                android:layout_height="23dp"
+                android:layout_marginTop="17dp"
+                android:layout_weight="4"
                 android:background="@null"
                 android:hint="请输入手机号"
                 android:textSize="14sp" />
@@ -70,8 +72,9 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="17dp"
                 android:layout_weight="2"
-                android:paddingLeft="15dp"
                 android:text="发送验证码"
                 android:textColor="#3658E0"
                 android:textSize="14sp" />
@@ -90,15 +93,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
                 android:layout_marginRight="33dp"
-                android:paddingLeft="15dp"
+                android:layout_marginTop="17dp"
                 android:text="验证码"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:layout_width="200dp"
-                android:layout_height="54dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="17dp"
                 android:background="@null"
                 android:hint="请输入验证码"
                 android:textSize="14sp" />
@@ -117,15 +122,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="17dp"
                 android:layout_marginRight="19dp"
-                android:paddingLeft="15dp"
                 android:text="经销商号"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:layout_width="200dp"
-                android:layout_height="54dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="17dp"
                 android:background="@null"
                 android:hint="请输入绑定的经销商号"
                 android:textSize="14sp" />
@@ -136,11 +143,11 @@
         android:id="@+id/L_layout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="15dp"
         android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/L_layout">
 
         <CheckBox
