--- a/app/src/main/res/layout/reset_password.xml
+++ b/app/src/main/res/layout/reset_password.xml
@@ -37,7 +37,7 @@
     <LinearLayout
         android:id="@+id/L_layout"
         android:layout_width="345dp"
-        android:layout_height="220dp"
+        android:layout_height="225dp"
         android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:orientation="vertical"
@@ -54,24 +54,26 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="17dp"
                 android:layout_marginRight="33dp"
-                android:paddingLeft="15dp"
                 android:text="手机号"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="54dp"
+                android:layout_width="150dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="17dp"
                 android:background="@null"
                 android:hint="请输入手机号"
-
                 android:textSize="14sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="114dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="17dp"
                 android:text="验证码"
                 android:textColor="#3658E0"
                 android:textSize="14sp" />
@@ -90,15 +92,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="17dp"
                 android:layout_marginRight="33dp"
-                android:paddingLeft="15dp"
                 android:text="验证码"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_width="150dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="17dp"
                 android:background="@null"
                 android:hint="请输入验证码"
                 android:textSize="14sp" />
@@ -117,15 +121,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="17dp"
                 android:layout_marginRight="19dp"
-                android:paddingLeft="15dp"
                 android:text="设置密码"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="54dp"
+                android:layout_width="150dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="17dp"
                 android:background="@null"
                 android:hint="请输入密码"
                 android:textSize="14sp" />
@@ -144,15 +150,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="17dp"
                 android:layout_marginRight="19dp"
-                android:paddingLeft="15dp"
                 android:text="设置密码"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="54dp"
+                android:layout_width="150dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="17dp"
                 android:background="@null"
                 android:hint="请再次输入密码"
                 android:textSize="14sp" />
