--- a/app/src/main/res/layout/set_password.xml
+++ b/app/src/main/res/layout/set_password.xml
@@ -54,7 +54,7 @@
             android:layout_marginLeft="15dp"
             android:textStyle="bold"/>
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="23dp"
             android:hint="请输入密码"
             android:textSize="14sp"
@@ -79,7 +79,7 @@
             android:layout_marginTop="17dp"
             android:textStyle="bold"/>
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="23dp"
             android:layout_marginLeft="19dp"
             android:layout_marginTop="17dp"
