--- a/app/src/main/res/layout/agreement.xml
+++ b/app/src/main/res/layout/agreement.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="375dp"
+    android:layout_height="667dp"
     tools:context=".AgreementActivity">
     <RelativeLayout
         android:id="@+id/R_layout"
@@ -38,10 +38,10 @@
     <TextView
         android:id="@+id/text_view2"
         android:layout_width="345dp"
-        android:layout_height="553dp"
+        android:layout_height="500dp"
         app:layout_constraintTop_toBottomOf="@+id/R_layout"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="19dp"
         android:textSize="14sp"
         android:textColor="#ADADB9"
