--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -41,7 +41,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
             <EditText
-                android:id="@+id/edit_text"
+                android:id="@+id/et_tel"
                 android:layout_width="200dp"
                 android:layout_height="23dp"
                 android:layout_marginTop="4dp"
@@ -70,7 +70,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/line"/>
 
             <EditText
-                android:id="@+id/edit_text2"
+                android:id="@+id/et_pwd"
                 android:layout_width="200dp"
                 android:layout_height="23dp"
                 android:layout_marginTop="3dp"
@@ -108,6 +108,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
+            android:id="@+id/btn_login"
             android:layout_width="281dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
