--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -41,7 +41,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
             <EditText
-                android:id="@+id/et_tel"
+                android:id="@+id/et_account"
                 android:layout_width="200dp"
                 android:layout_height="23dp"
                 android:layout_marginTop="4dp"
